# sonneur-c

./: CMakeLists.txt  LICENSE  README.MD  main.c
include/: descriptor.h  deserializer.h  hash.h  serializer.h  sonneur.h
src/: descriptor.c  deserializer.c  hash.c  serializer.c
